force-app/main/default/objects/Back_Promoted_Result__c/Back_Promoted_Result__c.object-meta.xml
<CustomObject>
    <label>Back Promoted Result</label>
    <nameField>
        <displayFormat>BPUS-{00000}</displayFormat>
        <label>Back Promoted Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Back Promoted Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>