force-app/main/default/objects/Back_Promoted_Result__c/fields/BackPromoted_Userstory__c.field-meta.xml
<CustomField>
    <fullName>BackPromoted_Userstory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BackPromoted Userstory</label>
    <referenceTo>copado__User_Story__c</referenceTo>
    <relationshipLabel>Back Promoted Results (BackPromoted Userstory)</relationshipLabel>
    <relationshipName>Back_Promoted_Results1</relationshipName>
    <type>Lookup</type>
</CustomField>