force-app/main/default/objects/Back_Promoted_Result__c/fields/BackPromotionSuccessTimeStamp__c.field-meta.xml
<CustomField>
    <fullName>BackPromotionSuccessTimeStamp__c</fullName>
    <label>BackPromotionSuccessTimeStamp</label>
    <type>DateTime</type>
</CustomField>