force-app/main/default/objects/Back_Promoted_Result__c/fields/Deployment__c.field-meta.xml
<CustomField>
    <fullName>Deployment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deployment</label>
    <referenceTo>copado__Deployment__c</referenceTo>
    <relationshipLabel>Back Promoted Results</relationshipLabel>
    <relationshipName>Back_Promoted_Results</relationshipName>
    <type>Lookup</type>
</CustomField>