force-app/main/default/objects/Back_Promoted_Result__c/fields/Promotion__c.field-meta.xml
<CustomField>
    <fullName>Promotion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promotion</label>
    <referenceTo>copado__Promotion__c</referenceTo>
    <relationshipLabel>Back Promoted Results</relationshipLabel>
    <relationshipName>Back_Promoted_Results</relationshipName>
    <type>Lookup</type>
</CustomField>