force-app/main/default/objects/Back_Promoted_Result__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Back Promotion Created</fullName>
            </value>
            <value>
                <fullName>Back Promotion in Progress</fullName>
            </value>
            <value>
                <fullName>Back Promotion Failed</fullName>
            </value>
            <value>
                <fullName>Back Promotion Successfull</fullName>
            </value>
            <value>
                <fullName>Commit in Progress</fullName>
            </value>
            <value>
                <fullName>Commit Completed</fullName>
            </value>
            <value>
                <fullName>Commit Failed</fullName>
            </value>
            <value>
                <fullName>Merge Conflict</fullName>
            </value>
            <value>
                <fullName>Conflicts Resolved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>