force-app/main/default/objects/Back_Promoted_Result__c/fields/User_Story__c.field-meta.xml
<CustomField>
    <fullName>User_Story__c</fullName>
    <label>User Story</label>
    <referenceTo>copado__User_Story__c</referenceTo>
    <relationshipLabel>Back Promoted Results</relationshipLabel>
    <relationshipName>Back_Promoted_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>