force-app/main/default/objects/Back_Promoted_Result__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>User_Story__c</columns>
    <columns>BackPromoted_Userstory__c</columns>
    <columns>Deployment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>